--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@ body {
 h1 {
   font-size: 2rem;
   color: #333;
+  text-align: center;
 }
 
 label {
@@ -33,6 +34,54 @@ button:hover {
   background-color: #005bb5;
 }
 
-canvas {
+.canvas-container {
+  position: relative;
+  width: 100%;
+  height: 500px; /* Augmentation de la hauteur */
+  border: 1px solid #ddd;
+  background-color: #f9f9f9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 20px;
+  overflow: hidden; /* Empêche le débordement */
+}
+
+.vaisseau {
+  position: absolute;
+  transition: top 0.1s ease-in-out;
+}
+
+.graph-container {
+  border: 1px solid #ddd;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.results-container {
+  display: flex;
+  flex-wrap: wrap; /* Permet d'empiler les éléments sur petit écran */
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px; /* Espace entre les cartes */
+}
+
+.form-container {
+  margin-bottom: 20px;
+}
+
+.simulation-container {
+  border: 1px solid #ddd;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  flex: 1 1 500px; /* Largeur minimale de 500px et occupe l'espace disponible */
+}
+
+@media (max-width: 768px) {
+  .graph-container,
+  .simulation-container {
+    width: 100%;
+  }
 }
